# wGameEngine

./: .gitignore  CMakeLists.txt  README.md  arborescence.txt
include/Core/: Game.h
include/Entities/: Player.h
include/States/: Level1State.h  MenuState.h  State.h  StateManager.h
include/Utils/: Button.h
src/: main.cpp
src/Core/: Game.cpp
src/Entities/: Player.cpp
src/States/: Level1State.cpp  MenuState.cpp  State.cpp  StateManager.cpp
src/Utils/: Button.cpp
